--- a/config.toml
+++ b/config.toml
@@ -1,17 +1,17 @@
 # do NOT include a trailing slash on the base URL
-base_url = "https://abridge.netlify.app"
+base_url = "https://lambdasawa.page"
 # Usable site directly from disk, Including Search: "/home/jieiku/.dev/abridge/public"
 # Also set index format = "elasticlunr_javascript", and in [extra] uglyurls = true, integrity = false
 # If you use the npm/node script then all you have to do is set offline = true, and everything else is automatic.
 
-title = "Abridge"
-description = "Abridge is a fast and lightweight Zola theme using semantic html, abridge.css class-light CSS, and No Mandatory JS."
-#theme = "abridge"
+title = "λ沢.page"
+description = "lambdasawa page"
+theme = "abridge"
 
-default_language = "en"
+default_language = "ja"
 compile_sass = true
 minify_html = false
-build_search_index = true
+build_search_index = false
 generate_feed = true
 taxonomies = [
   #    {name = "categories", feed = true},
@@ -40,35 +40,6 @@ external_links_no_follow = false   # rel="nofollow"
 external_links_no_referrer = false # rel="noreferrer"
 smart_punctuation = false          # `...` to `…`, `"quote"` to `“curly”` etc
 
-# Any Extra language you do not use, delete or comment out the extra language sections:
-[languages.fr]
-title = "Abridge"
-description = "Abridge est un thème Zola rapide et léger utilisant le html sémantique, le CSS abridge.css class-light et aucun JS obligatoire."
-generate_feed = true
-build_search_index = true
-search.include_title = true                                                                                                                     # include title of page/section in index
-search.include_description = true                                                                                                               # include description of page/section in index
-search.include_content = true                                                                                                                   # include rendered content of page/section in index
-# search.truncate_content_length = 100 # Truncate at nth character. May be useful if index is getting too large.
-taxonomies = [
-  #    {name = "categories", feed = true},
-  { name = "tags", feed = true },
-]
-
-[languages.es]
-title = "Abridge"
-description = "Abridge es un tema de Zola rápido y liviano que utiliza HTML semántico, CSS ligero de clase abridge.css y JS no obligatorio."
-generate_feed = true
-build_search_index = true
-search.include_title = true                                                                                                                  # include title of page/section in index
-search.include_description = true                                                                                                            # include description of page/section in index
-search.include_content = true                                                                                                                # include rendered content of page/section in index
-# search.truncate_content_length = 100 # Truncate at nth character. May be useful if index is getting too large.
-taxonomies = [
-  #    {name = "categories", feed = true},
-  { name = "tags", feed = true },
-]
-
 [extra]
 ###############################################################################
 ### Layout & Format
@@ -78,17 +49,17 @@ taxonomies = [
 ###############################################################################
 
 menu = [
-  #    {url = "blog", name = "Blog", slash = true, blank = false, size="s110"},
+  { url = "blog", name = "Blog", slash = true, blank = false, size = "s110" },
   { url = "about", name = "About", slash = true, blank = false, size = "s110" },
-  { url = "archive", name = "Posts", slash = true, blank = false, size = "s110" },
-  #    {url = "categories", name = "Categories", slash = true, blank = false, size="s110"},
-  { url = "tags", name = "Tags", slash = true, blank = false, size = "s110" },
+  # { url = "archive", name = "Posts", slash = true, blank = false, size = "s110" },
+  # { url = "categories", name = "Categories", slash = true, blank = false, size = "s110" },
+  # { url = "tags", name = "Tags", slash = true, blank = false, size = "s110" },
 ]
 menu_footer = [
-  { url = "about", name = "About", slash = true, blank = false },
-  { url = "contact", name = "Contact", slash = true, blank = false },
-  { url = "privacy", name = "Privacy", slash = true, blank = false },
-  { url = "sitemap.xml", name = "Sitemap", slash = false, blank = true },
+  #  { url = "about", name = "About", slash = true, blank = false },
+  #  { url = "contact", name = "Contact", slash = true, blank = false },
+  #  { url = "privacy", name = "Privacy", slash = true, blank = false },
+  #  { url = "sitemap.xml", name = "Sitemap", slash = false, blank = true },
 ]
 
 toc = true
@@ -111,8 +82,8 @@ footer_credit = true
 
 ### Uncomment one of the below lines, or neither, depending on which type of logo you want to use:
 #logo = { file="logo.svg", width="32", height="32", alt="Abridge", text="bridge" }
-#textlogo = '<font color="#f90">A</font>bridge'
-textlogo = '<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#f90" viewBox="0 0 96 96" width="28" height="28"><path stroke-width="14" d="M14 99 46 7h4l32 92"/><path stroke-width="9" d="M-3 82c43-26 59-26 102 0"/><path stroke-linecap="round" stroke-width="1.5" d="M94 72v7m-5-9.8v7m-5-9.8v7.1M79 64v7M63 57.7v7m-5-8.2v7m-5-7.8v7m-5-7.2v7m-5-6.7v7m-5-6.3v7m-5-5.8v7M17 64v7m-5-4.6v7m-5-4.2v7M2 72v7"/></svg>bridge'
+textlogo = '<font color="#ff8c00">λ沢.page</font>'
+#textlogo = '<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#f90" viewBox="0 0 96 96" width="28" height="28"><path stroke-width="14" d="M14 99 46 7h4l32 92"/><path stroke-width="9" d="M-3 82c43-26 59-26 102 0"/><path stroke-linecap="round" stroke-width="1.5" d="M94 72v7m-5-9.8v7m-5-9.8v7.1M79 64v7M63 57.7v7m-5-8.2v7m-5-7.8v7m-5-7.2v7m-5-6.7v7m-5-6.3v7m-5-5.8v7M17 64v7m-5-4.6v7m-5-4.2v7M2 72v7"/></svg>bridge'
 
 sitedesc = false # enables or disables the display of the site description below the logo.
 headhr = false   # show or hide horizontal rule below header
@@ -130,15 +101,15 @@ foothr = true    # show or hide horizontal rule above footer
 ### To always set the page title exactly eg "Abridge" then comment out title_addition or set to false (not recommend, bad for SEO)
 ###############################################################################
 
-title_separator = "|"                                                                                 # Separator between title and title_addition, set as |, -, _, etc
-title_addition = "Fast & Lightweight Zola Theme"                                                      # a default value for title addition
-author = "Jake G"                                                                                     # Put Your Name here
-keywords = "Abridge, Abridge.css, Zola, Theme, Zola Theme, getzola, Semantic Html, Fast, lightweight" # used for the primary site index
-banner = "banner.png"                                                                                 # Used as default image for OpenGraph/Twitter if page specific image is undefined.
-twitter_meta = "your-user-name"                                                                       # for SEO: twitter:site and twitter:creator
-google = "Your Google Site verification code."
-bing = "Your Bing Site verification code."
-seo = true                                                                                            # enable or disable seo-related meta tags: opengraph, facebook, twitter
+title_separator = "|"                   # Separator between title and title_addition, set as |, -, _, etc
+title_addition = "λ沢.page"              # a default value for title addition
+author = "Tsubasa Irisawa"              # Put Your Name here
+keywords = "Tsuasa Irisawa, lambdasawa" # used for the primary site index
+# banner = "banner.png"                   # Used as default image for OpenGraph/Twitter if page specific image is undefined.
+twitter_meta = "lambdasawa" # for SEO: twitter:site and twitter:creator
+# google = "Your Google Site verification code."
+# bing = "Your Bing Site verification code."
+# seo = false # enable or disable seo-related meta tags: opengraph, facebook, twitter
 #dev = false # development mode, if true then robots.txt should prevent search indexing.
 
 
@@ -147,30 +118,30 @@ seo = true                                                                      
 ###   https://github.com/Jieiku/abridge/blob/master/templates/macros/social.html
 ###############################################################################
 
-feed = true                       # this adds the RSS feed icon in the footer.
-mail = "name@example.com"
-mastodon = "@your-user-name"
-element = "matrix.example.com"
-buymeacoffee = "your-user-name"
-kofi = "your-user-name"
-discord = "your-discord"          # Everything after https://discord.com/   eg: invite/my-server  *or*  servers/my-server-id
-twitter = "your-user-name"
-facebook = "your-user-name"
-linkedin = "your-user-name"
-gitlab = "your-user-name"
-github = "your-user-name"
-codeberg = "your-user-name"       # Everything after https://codeberg.org/   eg: username  *or*  username/repository
-github_sponsor = "your-user-name"
-bitbucket = "your-user-name"
-python = "your-user-name"
-docker = "your-user-name"
-stack = "your-user-name"
-instagram = "your-user-name"
+feed = true                   # this adds the RSS feed icon in the footer.
+mail = "lambdasawa@gmail.com"
+mastodon = "@lambdasawa"
+# element = "matrix.example.com"
+# buymeacoffee = "your-user-name"
+# kofi = "your-user-name"
+discord = "lambdasawa"  # Everything after https://discord.com/   eg: invite/my-server  *or*  servers/my-server-id
+twitter = "lambdasawa"
+facebook = "lambdasawa"
+# linkedin = "lambdasawa"
+# gitlab = "lambdasawa"
+github = "lambdasawa"
+# codeberg = "your-user-name"       # Everything after https://codeberg.org/   eg: username  *or*  username/repository
+# github_sponsor = "lambdasawa"
+# bitbucket = "your-user-name"
+# python = "your-user-name"
+# docker = "your-user-name"
+# stack = "your-user-name"
+instagram = "lambdasawa"
 #pixelfed = "@your-user-name" # Heaviest icon, off by default
-pinterest = "your-user-name"
-twitch = "your-user-name"
-youtube = "channel/your-channel-id"
-researchgate = "your-profile-id"
+# pinterest = "your-user-name"
+# twitch = "your-user-name"
+youtube = "channel/lambdasawa"
+# researchgate = "your-profile-id"
 
 
 ###############################################################################
