--- a/config.toml
+++ b/config.toml
@@ -228,11 +228,11 @@ pwa_BASE_CACHE_FILES = "'/js/theme.min.js','/js/theme_light.min.js','/abridge.cs
 ### Favicons, comment out a line to disable loading some or all of these if needed.
 ###############################################################################
 
-favicon_theme_color = "#333333"
-favicon_ms_color = "#333333"
+favicon_theme_color = "#ff8c00"
+favicon_ms_color = "#ff8c00"
 favicon_mask = "safari-pinned-tab.svg" # safari-pinned-tab.svg
-favicon_mask_color = "#ff9900"
-favicon_svg = "favicon.svg"            # favicon.svg
+favicon_mask_color = "#ff8c00"
+favicon_svg = "favicon.ico"            # favicon.svg
 favicon180 = "apple-touch-icon.png"    # apple-touch-icon.png
 favicon32 = "favicon-32x32.png"        # favicon-32x32.png
 favicon16 = "favicon-16x16.png"        # favicon-16x16.png
