--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ minify_html = false
 build_search_index = false
 generate_feed = true
 taxonomies = [
-  #    {name = "categories", feed = true},
-  { name = "tags", feed = true },
+  # { name = "categories", feed = true},
+  # { name = "tags", feed = true },
 ]
 
 #feed_filename = "atom.xml"
@@ -49,8 +49,8 @@ smart_punctuation = false          # `...` to `…`, `"quote"` to `“curly”` 
 ###############################################################################
 
 menu = [
-  { url = "blog", name = "Blog", slash = true, blank = false, size = "s110" },
   { url = "about", name = "About", slash = true, blank = false, size = "s110" },
+  { url = "atom.xml", name = "Feed", slash = true, blank = false, size = "s110" },
   # { url = "archive", name = "Posts", slash = true, blank = false, size = "s110" },
   # { url = "categories", name = "Categories", slash = true, blank = false, size = "s110" },
   # { url = "tags", name = "Tags", slash = true, blank = false, size = "s110" },
