--- a/config.toml
+++ b/config.toml
@@ -105,8 +105,8 @@ title_separator = "|"                   # Separator between title and title_addi
 title_addition = "λ沢.page"              # a default value for title addition
 author = "Tsubasa Irisawa"              # Put Your Name here
 keywords = "Tsuasa Irisawa, lambdasawa" # used for the primary site index
-# banner = "banner.png"                   # Used as default image for OpenGraph/Twitter if page specific image is undefined.
-twitter_meta = "lambdasawa" # for SEO: twitter:site and twitter:creator
+banner = "banner.jpg"                   # Used as default image for OpenGraph/Twitter if page specific image is undefined.
+twitter_meta = "lambdasawa"             # for SEO: twitter:site and twitter:creator
 # google = "Your Google Site verification code."
 # bing = "Your Bing Site verification code."
 # seo = false # enable or disable seo-related meta tags: opengraph, facebook, twitter
